test/conformance/chainsaw/globalcontext/not-ready/clusterpolicy-failed.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-not-ready
status:
  conditions:
  - reason: Failed
    status: "False"
    type: Ready
