test/conformance/chainsaw/globalcontext/not-ready/clusterpolicy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-not-ready
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
