test/conformance/chainsaw/globalcontext/not-ready/gctxentry-exists.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: deployments
