test/conformance/chainsaw/globalcontext/not-ready/gctxentry.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: deployments
spec:
  apiCall:
    urlPath: "/apis/apps/v1/namespaces/test-globalcontext/deployments"
    refreshInterval: 10s
