test/conformance/chainsaw/globalcontext/not-ready/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-globalcontext-not-ready
