test/conformance/chainsaw/globalcontext/not-ready/new-deployment-exists.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-deployment
  namespace: test-globalcontext
  labels:
    app: new-deployment
