test/conformance/chainsaw/globalcontext/not-ready/new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-deployment
  namespace: test-globalcontext-not-ready
  labels:
    app: new-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-deployment
  template:
    metadata:
      labels:
        app: new-deployment
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
