test/conformance/chainsaw/globalcontext/not-ready/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: not-ready
spec:
  steps:
  - name: setup
    try:
    - apply:
        file: namespace.yaml
    - apply:
        file: main-deployment.yaml
    - apply:
        file: gctxentry.yaml
    # - sleep:
    #     duration: 15s
    - apply:
        file: clusterpolicy.yaml
    - assert:
        file: clusterpolicy-ready.yaml
    - delete:
        ref:
          apiVersion: kyverno.io/v2alpha1
          kind: GlobalContextEntry
          name: gctx-not-ready
    - sleep:
        duration: 5s
    - assert:
        file: clusterpolicy-failed.yaml
    - apply:
        file: new-deployment.yaml
    - assert:
        file: new-deployment-exists.yaml
